# SynAnt

./: .gitignore  CMakeLists.txt  ErrorPane.qml  HelpPane.qml  IntroPane.qml  MainPane.qml  README  SynAnt.pro  appmanager.cpp  appmanager.h  fatalerrors.cpp  fatalerrors.h  game.h  gamepresenter.cpp  gamepresenter.h  gamestrings.h  hintswindow.cpp  hintswindow.h  introductionwindow.cpp  introductionwindow.h  main.cpp  main.qml  maingamewindow.cpp  maingamewindow.h  qml.qrc  register.cpp  scoreitem.cpp  scoreitem.h  wordmixer.cpp  wordmixer.h
Application/: .gitignore  Application.pro  CMakeLists.txt  DataEntryPane.qml  ErrorDialog.qml  ErrorPane.qml  GameStrings.qml  HelpPane.qml  IntroPane.qml  IntroPane.qml.autosave  MainPane.qml  MainPane.qml.autosave  PromptDiscardPane.qml  PromptDiscardPane.qml.autosave  PromptSaveExitPane.qml  Styles.qml  appmanager.cpp  appmanager.h  data  dataentrypresenter.cpp  dataentrypresenter.h  dataentrystrings.h  fatalerrors.cpp  game.h  gamecolors.h  gamepresenter.cpp  gamepresenter.h  gamestrings.h  hintswindow.cpp  introductionwindow.cpp  main.cpp  main.qml  maingamewindow.cpp  maingamewindow.h  qml.qrc  scoreitem.cpp  scoreitem.h  selectablelabel.h  styles.h  timing.h  (+2 more)
Application/Presentation/: dataentrypresenter.cpp  dataentrypresenter.h  gamepresenter.cpp  gamepresenter.h
Application/QML/: main.qml  qml.qrc
Application/QML/AppMain/: DataEntryPane.qml  HelpPane.qml  IntroPane.qml  MainPane.qml
Application/QML/Controls/: ActivationSwitch.qml  AppButton.qml  AppRadioButton.qml  AppSwitch.qml  Dropdown.qml  MixedWordPieces.qml  WordPiecesInput.qml
Application/QML/Dialogs/: ErrorDialog.qml  ErrorPane.qml  PromptDiscardPane.qml  PromptSaveExitPane.qml
Application/QML/OtherWidgets/: StatisticsBox.qml  StatusBox.qml
Application/QML/Utilities/: Animations.qml  GameStrings.qml  Styles.qml
Common/: Common.pro  datasource.cpp  datasource.h  datasourceaccess.cpp  datasourceaccess.h  exceptions.cpp  exceptions.h  game.h  gamefacade.cpp  gamefacade.h  gamefunctionalityproxy.cpp  gamefunctionalityproxy.h  gameinitproxy.cpp  gameinitproxy.h  gamemanager.cpp  gameproxy.cpp  gamestrings.h  inputbuilder.cpp  inputbuilder.h  scoreitem.cpp  scoreitem.h  wordmixer.cpp  wordmixer.h  wordmixerproxy.cpp  wordpairowner.cpp  wordpairowner.h
Common/CoreFunctionality/: inputbuilder.h  wordmixer.h  wordpairowner.cpp  wordpairowner.h
Common/DataAccess/: datasource.cpp  datasource.h
Common/Management/: gamefacade.cpp  gamefacade.h  gamemanager.cpp  gamemanager.h
Common/Proxies/: datasourceproxy.cpp  datasourceproxy.h  gamefunctionalityproxy.cpp  gameproxy.cpp  gameproxy.h  wordmixerproxy.h
Common/Utilities/: game.h  gamestrings.h
SystemFunctionality/: CMakeLists.txt  SystemFunctionality.pro  systemfunctionality.cpp  systemfunctionality.h  systemfunctionality_global.h
SystemFunctionality/CoreFunctionality/: inputbuilder.cpp  inputbuilder.h  wordmixer.cpp  wordmixer.h  wordpairowner.cpp  wordpairowner.h
SystemFunctionality/DataAccess/: dataentrycache.cpp  dataentrycache.h  dataentrystatistics.cpp  dataentrystatistics.h  dataentryvalidator.cpp  dataentryvalidator.h  datasource.cpp  datasource.h  datasourceaccesshelper.cpp  datasourceaccesshelper.h  datasourceloader.cpp  datasourceloader.h
SystemFunctionality/Management/: dataentryfacade.cpp  dataentryfacade.h  gamefacade.cpp  gamefacade.h  gamemanager.cpp  gamemanager.h
SystemFunctionality/ManagementInterfaces/: data.cpp  data.h  dataaccess.cpp  dataaccess.h  dataentry.cpp  dataentry.h  dataentryinterface.cpp  dataentryinterface.h  datafunctionality.cpp  datafunctionality.h  datainterface.cpp  game.cpp  gamefunctionality.cpp  gamefunctionality.h  gamefunctionalityinterface.cpp  gamefunctionalityinterface.h  gameinit.cpp  gameinit.h  gameinitinterface.cpp  gameinitinterface.h  gameinterface.cpp  gameinterface.h
SystemFunctionality/ManagementProxies/: dataaccessproxy.cpp  dataaccessproxy.h  dataentryproxy.cpp  dataentryproxy.h  datafunctionalityproxy.cpp  datafunctionalityproxy.h  dataproxy.cpp  dataproxy.h  gamefunctionalityproxy.cpp  gamefunctionalityproxy.h  gameinitproxy.cpp  gameinitproxy.h  gameproxy.cpp  gameproxy.h
SystemFunctionality/Proxies/: dataentryproxy.cpp  dataentryproxy.h  datafunctionalityproxy.cpp  datafunctionalityproxy.h  dataproxy.cpp  dataproxy.h  datasourceproxy.cpp  datasourceproxy.h  gamefunctionalityproxy.cpp  gamefunctionalityproxy.h  gameinitproxy.cpp  gameproxy.cpp  gameproxy.h  wordmixerproxy.cpp
SystemFunctionality/Utilities/: chronometer.cpp  chronometer.h  databaseutils.h  dataentryutils.h  exceptions.cpp  exceptions.h  game.h  gamestrings.h  gameutils.h  scoreitem.cpp  scoreitem.h  statisticsitem.cpp  statisticsitem.h
Tests/: CMakeLists.txt  Tests.pro  tst_corefunctionalitytests.cpp  tst_dataaccesstests.cpp  tst_dataentrytests.cpp  tst_utilitiestests.cpp
Tests/CommonTests/: CommonTests.pro  tst_commontests.cpp
Tests/CoreFunctionalityTests/: CoreFunctionalityTests.pro  tst_corefunctionalitytests.cpp
Tests/DataAccessTests/: DataAccessTests.pro  tst_dataaccesstests.cpp
Tests/DataEntryTests/: DataEntryTests.pro  tst_dataentrytests.cpp
Tests/UtilitiesTests/: UtilitiesTests.pro  tst_utilitiestests.cpp
UIResources/: UIResources.pro  uiresources.cpp  uiresources.h  uiresources_global.h
UIResources/BuildingBlocks/: fatalerrors.cpp  fatalerrors.h  hintswindow.cpp  introductionwindow.cpp  introductionwindow.h  maingamewindow.cpp  maingamewindow.h
UIResources/OtherResources/: selectablelabel.cpp  styles.h
